<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="gitRelease_defaultMinMax">0 / 0</string>
    <string name="gitRelease_update">Update</string>
    <string name="gitRelease_cancel">Cancel</string>
    <string name="gitRelease_defaultPercent">0%</string>
    <string name="gitRelease_checkTitle">CheckSum</string>
    <string name="gitRelease_checkMassage">checking…</string>
    <string name="gitRelease_update_massage">update inprogress, don\'t close dialog!</string>
    <string name="gitRelease_checking_new_version">Checking new version…</string>
    <string name="gitRelease_loading">Loading…</string>
    <string name="gitRelease_download">Download</string>
    <string name="gitRelease_new_version">New version !!</string>
    <string name="gitRelease_new_update">New Update available !!</string>
    <string name="gitrelease_config_key">gitrelease_config_key</string>
    <string name="gitrelease_config">gitrelease_config</string>
</resources>